chore: update version

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "step-gfx-player",
   "productName": "step-gfx-player",
-  "version": "0.0.1",
-  "description": "My Electron application description",
+  "version": "0.0.2",
+  "description": "A player for playing STEP graphics",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
