--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "A player for playing STEP graphics",
   "main": ".webpack/main",
   "scripts": {
-    "start": "ELECTRON_ENV=development electron-forge start",
-    "package": "ELECTRON_ENV=production electron-forge package",
-    "make": "ELECTRON_ENV=production electron-forge make",
+    "start": "cross-env ELECTRON_ENV=development electron-forge start",
+    "package": "cross-env ELECTRON_ENV=production electron-forge package",
+    "make": "cross-env ELECTRON_ENV=production electron-forge make",
     "lint": "eslint --ext .ts,.tsx ."
   },
   "keywords": [],
@@ -29,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "electron": "27.1.2",
     "eslint": "^8.54.0",
